tests/tsc-references/internalModules/importDeclarations/invalidImportAliasIdentifiers/input.ts/es5.2.minified/output.js
var E, E1, C = function() {
    "use strict";
    !function(instance, Constructor) {
        if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
    }(this, C);
};
(E1 = E || (E = {
}))[E1.Red = 0] = "Red", E1[E1.Blue = 1] = "Blue";
export { };
